tests/toy/neg/000628_mutation.toylang
program a = { a = a == a var; } .
